compiler/e2e/test/snapshot/symbol/redefinition/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: symbol `first` is already defined in the scope `main`
  ╭─ compiler/e2e/test/snapshot/symbol/redefinition/main.pnx:6:15
  │
3 │ public module first:
  │               ----- symbol `first` is already defined here
  ·
6 │ public module first:
  │               ^^^^^ redefinition here

error: symbol `Second` is already defined in the scope `main`
   ╭─ compiler/e2e/test/snapshot/symbol/redefinition/main.pnx:12:14
   │
 9 │ public trait Second:
   │              ------ symbol `Second` is already defined here
   ·
12 │ public trait Second:
   │              ^^^^^^ redefinition here

error: symbol `First` is already defined in the scope `main::Inner`
   ╭─ compiler/e2e/test/snapshot/symbol/redefinition/main.pnx:19:17
   │
17 │     public type First
   │                 ----- symbol `First` is already defined here
18 │ 
19 │     public type First
   │                 ^^^^^ redefinition here

error: symbol `Second` is already defined in the scope `main::Inner`
   ╭─ compiler/e2e/test/snapshot/symbol/redefinition/main.pnx:23:21
   │
21 │     public const Second: usize
   │                  ------ symbol `Second` is already defined here
22 │     
23 │     public function Second() 
   │                     ^^^^^^ redefinition here

error: symbol `Third` is already defined in the scope `main`
   ╭─ compiler/e2e/test/snapshot/symbol/redefinition/main.pnx:28:15
   │
25 │ public struct Third:
   │               ----- symbol `Third` is already defined here
   ·
28 │ public struct Third:
   │               ^^^^^ redefinition here

error: symbol `SecondVariant` is already defined in the scope `main::Fourth`
   ╭─ compiler/e2e/test/snapshot/symbol/redefinition/main.pnx:35:5
   │
34 │     SecondVariant
   │     ------------- symbol `SecondVariant` is already defined here
35 │     SecondVariant
   │     ^^^^^^^^^^^^^ redefinition here

error: symbol `Fourth` is already defined in the scope `main`
   ╭─ compiler/e2e/test/snapshot/symbol/redefinition/main.pnx:37:13
   │
32 │ public enum Fourth:
   │             ------ symbol `Fourth` is already defined here
   ·
37 │ public enum Fourth:
   │             ^^^^^^ redefinition here

error: symbol `FourthVariant` is already defined in the scope `main::Fourth`
   ╭─ compiler/e2e/test/snapshot/symbol/redefinition/main.pnx:40:5
   │
39 │     FourthVariant
   │     ------------- symbol `FourthVariant` is already defined here
40 │     FourthVariant
   │     ^^^^^^^^^^^^^ redefinition here

error: symbol `Fifth` is already defined in the scope `main`
   ╭─ compiler/e2e/test/snapshot/symbol/redefinition/main.pnx:44:15
   │
42 │ public marker Fifth
   │               ----- symbol `Fifth` is already defined here
43 │ 
44 │ public marker Fifth
   │               ^^^^^ redefinition here

error: symbol `Sixth` is already defined in the scope `main`
   ╭─ compiler/e2e/test/snapshot/symbol/redefinition/main.pnx:49:14
   │
46 │ public trait Sixth:
   │              ----- symbol `Sixth` is already defined here
   ·
49 │ public trait Sixth:
   │              ^^^^^ redefinition here

error: symbol `test` is already defined in the scope `main::[implements Test[int32]]`
   ╭─ compiler/e2e/test/snapshot/symbol/redefinition/main.pnx:59:14
   │
56 │     function test():
   │              ---- symbol `test` is already defined here
   ·
59 │     function test():
   │              ^^^^ redefinition here

error: symbol `duplicateInner` is already defined in the scope `main::inner`
  ╭─ compiler/e2e/test/snapshot/symbol/redefinition/inner.pnx:4:15
  │
1 │ public module duplicateInner:
  │               -------------- symbol `duplicateInner` is already defined here
  ·
4 │ public module duplicateInner:
  │               ^^^^^^^^^^^^^^ redefinition here

error: Compilation aborted due to 12 error(s)



stdout:
